[package]
name = "ocr-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
dotenv = "0.15.0"
image = "0.24.6"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde_json = "1.0.99"
